Added base path for API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=example
+
+# Spring Data REST properties
+spring.data.rest.base-path=/magic-api
